<resources>
    <string name="app_name">Telegram</string>
    <string name="username">Ali</string>
    <string name="last_seen">last seen recently</string>
    <string name="mobile">Mobile</string>
    <string name="line">ـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ</string>
    <string name="notifications">Notifications</string>
    <string name="info">Info</string>
    <string name="phone_number">+201234567890</string>
    <string name="off">OFF</string>
    <string name="user">Username</string>
    <string name="user_name">\@Ali</string>
    <string name="voice">Voice</string>
    <string name="media">Media</string>
    <string name="photo1">photo1</string>
    <string name="photo2">photo2</string>
    <string name="photo3">photo3</string>
    <string name="photo4">photo4</string>
    <string name="photo5">photo5</string>
    <string name="photo6">photo6</string>
    <string name="music">Music</string>
    <string name="links">Links</string>
    <string name="files">files</string>
    <string name="s_line">ـــــــــ</string>
    <string name="qrcode">QRcode</string>
    <string name="message_icone">message_icone</string>
    <string name="d_3dots">3dots</string>
    <string name="call_icon">call_icon</string>
    <string name="d_video_icon">video_icon</string>
    <string name="d_arrowicon">arrow_icon</string>
</resources>