<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/user_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:src="@drawable/avatar"
            app:layout_constraintTop_toBottomOf="@id/arrow"
            app:layout_constraintStart_toStartOf="@+id/arrow"
            app:layout_constraintBottom_toBottomOf="@+id/view"/>
        <Constraint
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/user_photo"
            app:layout_constraintTop_toTopOf="@id/user_photo"/>
        <Constraint
            android:id="@+id/lastseen"
            style="@style/descriptionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_seen"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <Constraint
            android:id="@+id/video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:src="@drawable/ic_baseline_videocam_24"
            app:layout_constraintEnd_toStartOf="@id/call"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="@+id/arrow" />

        <Constraint
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_call_24"
            app:layout_constraintEnd_toStartOf="@+id/three_dots"
            app:layout_constraintStart_toEndOf="@+id/video_call"
            app:layout_constraintTop_toTopOf="@+id/video_call" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/middle">
        <Constraint
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="#212D3B"
            android:layout_marginBottom="-10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/user_photo"/>
        <Constraint
            android:id="@+id/user_photo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="parent"/>
        <Constraint
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/user_photo"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/lastseen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_seen"
            android:layout_marginTop="-10dp"
            style="@style/descriptionStyle"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />
        <Constraint
            android:id="@+id/messageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/message_background"
            android:layout_marginTop="-10dp"
            android:visibility="invisible"
            android:src="@drawable/ic_baseline_message_24"
            app:layout_constraintEnd_toEndOf="@+id/three_dots"
            app:layout_constraintStart_toStartOf="@+id/call"
            app:layout_constraintTop_toBottomOf="@id/user_photo"/>
        <Constraint
            android:id="@+id/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BoldBlue"
            android:text="@string/info"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/arrow"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Constraint
            android:id="@+id/video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_videocam_24"
            app:layout_constraintEnd_toStartOf="@id/call"
            app:layout_constraintStart_toEndOf="@+id/lastseen"
            app:layout_constraintTop_toTopOf="@+id/arrow" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:background="#212D3B"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/user_photo"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Constraint
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-100dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/user_photo"
            app:layout_constraintTop_toBottomOf="@id/user_photo" />
        <Constraint
            android:id="@+id/lastseen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_seen"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name"/>
        <Constraint
            android:id="@+id/video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:visibility="invisible"
            android:src="@drawable/ic_baseline_videocam_24"
            app:layout_constraintEnd_toStartOf="@id/call"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="@+id/arrow" />
        <Constraint
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_call_24"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/three_dots"
            app:layout_constraintStart_toEndOf="@+id/video_call"
            app:layout_constraintTop_toTopOf="@+id/video_call" />
    </ConstraintSet>

    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@id/start">
        <OnSwipe app:touchAnchorId="@id/view"
            app:dragDirection="dragDown"/>
    </Transition>

    <Transition
        app:constraintSetStart="@id/middle"
        app:constraintSetEnd="@id/start">
        <OnSwipe app:touchAnchorId="@id/user_photo"
            app:dragDirection="dragDown"/>
    </Transition>

</MotionScene>